# docs/swagger.json
@@ -20,12 +20,12 @@
                 "summary": "Create an alias",
                 "parameters": [
                     {
-                        "description": "reqbody",
+                        "description": "Alias",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/urls.AliasRequest"
+                            "$ref": "#/definitions/save.AliasRequest"
                         }
                     }
                 ],
@@ -33,7 +33,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/urls.AliasResponse"
+                            "$ref": "#/definitions/save.AliasResponse"
                         }
                     },
                     "400": {
@@ -72,7 +72,7 @@
         }
     },
     "definitions": {
-        "urls.AliasRequest": {
+        "save.AliasRequest": {
             "description": "Alias data for creation",
             "type": "object",
             "required": [
@@ -80,32 +80,24 @@
             ],
             "properties": {
                 "alias": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 16,
+                    "minLength": 5
                 },
                 "url": {
                     "type": "string"
                 }
             }
         },
-        "urls.AliasResponse": {
+        "save.AliasResponse": {
             "description": "Response data for alias creation",
             "type": "object",
-            "required": [
-                "status"
-            ],
             "properties": {
                 "alias": {
                     "type": "string"
                 },
                 "error": {
                     "type": "string"
-                },
-                "status": {
-                    "type": "string",
-                    "enum": [
-                        "ok",
-                        "error"
-                    ]
                 }
             }
         }
